--- a/css/portal.css
+++ b/css/portal.css
@@ -12,11 +12,23 @@
     --clr-blue-primary:#022C90;
     --clr-blue-secondary:#2765D9;
     --clr-yellow:#FEBB01;
-    --clr-light-gray:#DCDCDC;
+    --clr-light-gray:#d9d9d9;
     --clr-dark-gray:#636363;
+    --clr-text: #212529;
+    --bg-light: #fafafa;
 }
 
-header{background-color: var(--clr-blue-primary)}
+.dark-mode:root{
+    --clr-blue-primary: #FEBB01;
+    --clr-light-gray: #636363;
+    --clr-dark-gray: #FEBB01;
+    --bg-light: #212529;
+    --clr-text: #febb01;
+}
+
+body{background-color: var(--bg-light)}
+
+header{background-color: #022C90}
 
 p{margin-bottom: 0}
 
@@ -25,27 +37,32 @@ p{margin-bottom: 0}
     justify-content: space-between;
 }
 
-.ag-logo{width: 15%}
-.footer-logo{width: 20%}
+.description, .footer-text, .msg{color: var(--clr-dark-gray)}
 
-.description, .footer-text, .msg{
-    color: var(--clr-dark-gray);
-}
+.ag-logo{width: 15%}
 
 .gov-logo--container{width: 50%}
+
 .gov-logo{width: 75%}
-.user-text{line-height: 1rem}
+
+.footer-logo{width: 20%}
+
+.user-text{
+    color: var(--clr-text);
+    line-height: 1rem;
+}
+
 .user-name{font-size: 1rem;}
 
 .user-btn{
-    background-color: var(--clr-blue-primary);
+    background-color: #022C90;
     padding: .25em .5em;
     border-radius: 50%;
     border: none;
 }
 
 .user-popover{
-    --bs-popover-bg: var(--clr-blue-primary);
+    --bs-popover-bg: #022C90;
     --bs-popover-body-color: #fff;
 }
 
@@ -81,7 +98,7 @@ p{margin-bottom: 0}
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
-.filter-btn, .pay-btn{background-color: var(--clr-blue-primary)}
+.filter-btn, .pay-btn{background-color: #022C90}
 
 .a11y-button:hover, .filter-btn:hover, .pay-btn:hover{opacity: .8}
 
@@ -90,25 +107,29 @@ p{margin-bottom: 0}
     top: 55%;
     right: 4%;
     transform: translateY(-50%);
-    color: var(--clr-dark-gray);
+    color: var(--clr-text);
 }
 
 .search-box{margin: 1em 0}
 
 #input-tributos{
+    background-color: var(--bg-light);
     border: 2px solid var(--clr-light-gray);
     border-radius: 8px;
     padding: .75em 1em;
 }
 
-#input-tributos option{color: var(--clr-dark-gray);}
+#input-tributos option{color: #636363;}
 
 #input-busca{
+    background-color: var(--bg-light);
     border: 2px solid var(--clr-light-gray);
     border-radius: 8px;
     padding: .75em 1em;
     width: 100%
 }
+
+input::placeholder{color: var(--clr-text);}
 
 #input-busca:focus, #input-busca:hover, #input-tributos:focus, #input-tributos:hover{
     outline: none;
@@ -133,8 +154,9 @@ p{margin-bottom: 0}
     text-align: center;
     border: 1px solid var(--clr-light-gray);
     border-radius: 16px;
-    background-color: #EEEEEE;
-    box-shadow: 0 2px 4px #ccc;
+    background-color: var(--bg-light);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .25);
+    color: var(--clr-text);
 }
 
 .grid-item:hover{
@@ -143,7 +165,7 @@ p{margin-bottom: 0}
 }
 
 footer{
-    background-color: #fff;
+    background-color: var(--bg-light);
     width: 100%;
 }
 
@@ -161,6 +183,7 @@ footer{
     .gov-logo--container{width: 50%}
 
     #input-busca{padding: .5em 1em}
+
     .search-box, .grid-title{
         width: 50%;
         margin: 0;
