--- a/css/dam.css
+++ b/css/dam.css
@@ -1,19 +1,10 @@
-.tributos__section{
-    height: 300px;
-    border: 1px solid #DCDCDC;
-    border-radius: 8px;
-}
-
-.tributos-footer p, span{
-    font-size: .8rem;
-}
 
 .sidebar{
     position: absolute;
     top: 0;
     transform: translateX(-100%);
 
-    background-color: var(--clr-blue-primary);
+    background-color: #022C90;
     z-index: 1;
     height: 100%;
     transition: 1s;
@@ -66,20 +57,30 @@
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
+    height: 300px;
+    border: 1px solid #DCDCDC;
+    border-radius: 8px;
 }
 
 .tributos-title{
+    color: var(--clr-text);
     padding: .5em;
     border-bottom: 2px solid white;
 }
 
 .tributos__section p{
     margin-bottom: .5em;
+    color: var(--clr-text);
 }
 
 footer{
     position: fixed;
     bottom: 0;
+}
+
+.tributos-footer p, span{
+    font-size: .8rem;
+    color: var(--clr-text);
 }
 
 @media (min-width: 992px) and (min-height: 600px){
@@ -89,16 +90,12 @@ footer{
         overflow-x: hidden;
     }
     
-    /* .tributos__section div + div{
-        border-left: 1px solid var(--clr-light-gray);
-    } */
-
     .tributos-footer p, span{
         font-size: 1rem;
     }
 }
 
-@media (min-width: 1200px) or (min-height: 888px){
+@media (min-width: 1200px) and (min-height: 888px){
     .tributos__section{
         height: 600px;
     }
