--- a/css/dam.css
+++ b/css/dam.css
@@ -1,4 +1,3 @@
-
 .sidebar{
     position: absolute;
     top: 0;
@@ -95,7 +94,7 @@ footer{
     }
 }
 
-@media (min-width: 1200px) and (min-height: 888px){
+@media (min-width: 1200px) or (min-height: 935px){
     .tributos__section{
         height: 600px;
     }
