--- a/style.css
+++ b/style.css
@@ -13,15 +13,26 @@
     --clr-yellow:#FEBB01;
     --clr-light-gray:#DCDCDC;
     --clr-dark-gray:#636363;
+    --clr-text: #212529;
+    --bg-light: #fafafa;
+}
+
+.dark-mode:root{
+    --clr-blue-primary: #FEBB01;
+    --clr-light-gray: #636363;
+    --clr-dark-gray: #FEBB01;
+    --bg-light: #212529;
+    --clr-text: #febb01;
 }
 
 body{
+    background-color: var(--bg-light);
     font-size: 1rem;
 }
 
 .row{display: flex}
 
-.section__head{background-color: var(--clr-blue-primary)}
+.section__head{background-color: #022C90}
 
 .section__head a{
     color: #fff;
@@ -49,14 +60,19 @@ body{
     margin: 0 auto 1em;
     display: flex;
     justify-content: center;
+    background-color: #fff;
 }
 
 .gov-logo{width: 75%}
 
 .forms-title{
+    color: var(--clr-text);
     font-weight: 400;
     text-align: center;
 }
+
+label,
+.forms-main p{color: var(--clr-text);}
 
 .forms-main{margin-top: 1em}
 
@@ -66,13 +82,14 @@ body{
     width: 100%;
     padding: 1.25em;
     border-radius: 16px;
-    border: 2px solid var(--clr-light-gray);
+    background-color: var(--bg-light);
+    border: 2px solid var(--clr-dark-gray);
 }
 
 .forms-main form input:focus,
 .forms-main form input:active{
     outline: none;
-    border: 2px solid var(--clr-blue-primary);
+    border: 2px solid #022C90;
 }
 
 .forms-footer{justify-content: space-between}
@@ -87,7 +104,7 @@ input::placeholder{font-size: 1rem}
 
 .btn{
     color: #fff;
-    background-color: var(--clr-blue-primary);
+    background-color: #022C90;
     text-decoration: none;
     border-radius: 16px;
     padding: .75em 0;
@@ -96,6 +113,23 @@ input::placeholder{font-size: 1rem}
 
 .btn:hover, .return-btn:hover{opacity: .7}
 
+.btn-group{
+    position: fixed;
+    top: 1%;
+    right: 1%;
+}
+
+.a11y-button{
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: .5em .75em;
+    background-color: var(--clr-yellow);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
+}
+
+.a11y-button:hover{cursor: pointer;}
+
 .certificado{
     justify-content: center;
     gap: .25em;
@@ -103,8 +137,8 @@ input::placeholder{font-size: 1rem}
 
 .voltar{
     background-color: #fff;
-    color: var(--clr-blue-primary);
-    border: 1px solid var(--clr-blue-primary);
+    color: #022C90;
+    border: 1px solid #022C90;
 }
 
 .anchor{color: var(--clr-blue-primary)}
@@ -112,7 +146,6 @@ input::placeholder{font-size: 1rem}
 .section-footer p{
     color: var(--clr-dark-gray);
     text-align: center;
-    font-size: .8rem;
 }
 
 @media (max-width: 991px) {
@@ -138,6 +171,8 @@ input::placeholder{font-size: 1rem}
     }
 
     .section-footer p{
+        font-size: .8rem;
+
         position: fixed;
         bottom: 0;
         left: 50%;
@@ -168,7 +203,7 @@ input::placeholder{font-size: 1rem}
         flex-direction: column;
         justify-content: space-between;
         padding: 1em;
-        background: linear-gradient(to bottom, var(--clr-blue-secondary) 0%, var(--clr-blue-primary) 100%);
+        background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);
     }
 
     .section__head p{
