--- a/style.css
+++ b/style.css
@@ -143,7 +143,9 @@ input::placeholder{font-size: 1rem}
 
 .anchor{color: var(--clr-blue-primary)}
 
+
 .section-footer p{
+    background-color: var(--bg-light);
     color: var(--clr-dark-gray);
     text-align: center;
 }
@@ -178,7 +180,6 @@ input::placeholder{font-size: 1rem}
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
-        background-color: #fff;
     }
 }
 
