--- a/css/portal.css
+++ b/css/portal.css
@@ -137,7 +137,7 @@ input::placeholder, input:focus{color: var(--text-gray)}
 
 #input-busca:focus, #input-busca:hover, #input-tributos:focus, #input-tributos:hover{
     outline: none;
-    border: 1px solid var(--clr-blue-primary);
+    border: 1px solid var(--btn-blue);
 }
 
 .search-box{position: relative}
@@ -169,7 +169,7 @@ input::placeholder, input:focus{color: var(--text-gray)}
 }
 
 .grid-item:hover{
-    border: 1px solid var(--clr-blue-primary);
+    border: 1px solid var(--btn-blue);
     cursor: pointer;
 }
 
