--- a/css/dam.css
+++ b/css/dam.css
@@ -74,7 +74,7 @@ footer{
     color: var(--text-dark);
 }
 
-@media (min-width: 992px) and (min-height: 600px) {
+@media (min-width: 992px) or (min-height: 600px) {
     .tributos__section{
         grid-template-columns: repeat(8, 1fr);
         overflow-y: hidden;
