modified gov logo width

--- a/css/portal.css
+++ b/css/portal.css
@@ -186,7 +186,7 @@ footer{
 
 @media (min-width: 992px) and (min-height: 700px) {
     .gov-logo{width: 40%}
-    .gov-logo--container{width: 50%}
+    .gov-logo--container{width: 130px}
     #input-busca{padding: .5em 1em}
 
     .grid__section{grid-template-columns: repeat(3, 1fr)}
@@ -206,7 +206,7 @@ footer{
 
 @media (min-width: 1200px) and (min-height: 800px){
     .gov-logo--container{width: 50%}
-    .gov-logo{width: 20%}
+    .gov-logo{width: 150px}
     .grid__section{grid-template-columns: repeat(4, 1fr)}
 }
 
