--- a/css/dam.css
+++ b/css/dam.css
@@ -25,7 +25,7 @@
     transform: translateX(0);
 }
 
-.bi-x-lg{color: #fff}
+.bi-x-lg{color:#fff}
 
 .close-btn{
     background-color: transparent;
@@ -45,24 +45,17 @@
 .tributos__section{
     overflow-y: scroll;
     overflow-x: hidden;
-    display: grid;
-    grid-template-columns: 1fr;
-    text-align: center;
-    height: 300px;
-    border: 1px solid #DCDCDC;
+    color: var(--text-dark);
+    border: 1px solid var(--border);
     border-radius: 8px;
+    height: 315px;
 }
 
-.tributos-title{
-    color: var(--text-dark);
-    padding: .5em;
-    border-bottom: 1px solid white;
-}
-
-.tributos__section p{
-    margin-bottom: .5em;
-    color: var(--text-dark);
-}
+.tributos{flex-basis: 30%;}
+.tributos-info{flex-basis: 70%;}
+.tributos-title{border-right: 1px solid #D9D9D9;}
+.tributos__section p{padding: .25em .5em}
+.tributos__section p + p{border-top: 1px solid #D9D9D9}
 
 footer{
     position: fixed;
