--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,8 @@ body{
 .content p{
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: 50%;
+    transform: translateY(-50%);
 
     color: #fff;
     margin: 1em;
