--- a/css/dam.css
+++ b/css/dam.css
@@ -45,17 +45,24 @@
 .tributos__section{
     overflow-y: scroll;
     overflow-x: hidden;
-    color: var(--text-dark);
-    border: 1px solid var(--border);
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    height: 300px;
+    border: 1px solid #DCDCDC;
     border-radius: 8px;
-    height: 315px;
 }
 
-.tributos{flex-basis: 30%;}
-.tributos-info{flex-basis: 70%;}
-.tributos-title{border-right: 1px solid #D9D9D9;}
-.tributos__section p{padding: .25em .5em}
-.tributos__section p + p{border-top: 1px solid #D9D9D9}
+.tributos-title{
+    color: var(--text-dark);
+    padding: .5em;
+    border-bottom: 1px solid white;
+}
+
+.tributos__section p{
+    margin-bottom: .5em;
+    color: var(--text-dark);
+}
 
 footer{
     position: fixed;
@@ -84,6 +91,7 @@ footer{
     .tributos__section{
         overflow-y: hidden;
         overflow-x: hidden;
+        grid-template-columns: 2fr repeat(7, 1fr);
         height: 320px;
     }
 
