--- a/css/dam.css
+++ b/css/dam.css
@@ -55,12 +55,16 @@
 .tributos-title{
     color: var(--text-dark);
     padding: .5em;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #DCDCDC;
 }
 
 .tributos__section p{
     margin-bottom: .5em;
     color: var(--text-dark);
+}
+
+.tributos__section div+div{
+    border-left: 1px solid #DCDCDC;
 }
 
 footer{
