--- a/css/portal.css
+++ b/css/portal.css
@@ -16,6 +16,7 @@
     --text-gray:#636363;
     --clr-yellow:#FEBB01;
     --clr-blue-primary:#022C90;
+    --clr-blue-secondary: #2765d9;
     --btn-blue: #022C90;
 }
 
