--- a/css/portal.css
+++ b/css/portal.css
@@ -10,7 +10,7 @@
 
 :root{
     --border:#D9D9D9;
-    --bg-light: #fafafa;
+    --bg-light: #fff;
     --text-blue: #022C90;
     --text-dark: #212529;
     --text-gray:#636363;
@@ -27,7 +27,7 @@
     --text-blue: #febb01;
     --text-gray: #febb01;
     --bg-light: #121212;
-    --clr-blue-primary: #555;
+    /* --clr-blue-primary: #555; */
 }
 
 body{background-color: var(--bg-light)}
@@ -186,7 +186,7 @@ footer{
     top: 50%;
 }
 
-@media (min-width: 768px) and (min-height: 600px) {
+@media (min-width: 768px) and (min-height: 600px){
     .gov-logo{width: 120px}
     .gov-logo--container{width: 35%}
     
