--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 :root{
     --border:#D9D9D9;
-    --bg-light: #fafafa;
+    --bg-light: #fff;
     --text-blue: #022C90;
     --text-dark: #212529;
     --text-gray:#636363;
@@ -23,9 +23,9 @@
     --border: #ababab;
     --btn-blue: #febb01;
     --btn-text: #000;
-    --text-dark: #ababab;
+    --text-dark: #febb01;
     --text-blue: #febb01;
-    --text-gray: #ababab;
+    --text-gray: #febb01;
     --bg-light: #121212;
     --clr-blue-primary: #000;
 }
