gov logo bg color modified

--- a/css/portal.css
+++ b/css/portal.css
@@ -48,7 +48,7 @@ p{margin-bottom: 0}
 .gov-logo--container{width: 50%}
 .gov-logo{
     width: 75%;
-    background-color: #fafafa;
+    background-color: #fff;
 }
 
 .user-text{
