--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body{
     margin: 0 auto 1em;
     display: flex;
     justify-content: center;
-    background-color: #fafafa;
+    background-color: #fff;
 }
 
 .gov-logo{width: 75%}
