--- a/css/dam.css
+++ b/css/dam.css
@@ -76,7 +76,7 @@ footer{
 
 @media (max-width:576px) {
     .pay-btn{
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
         display: flex;
         justify-content: center;
@@ -90,6 +90,7 @@ footer{
 @media (min-width: 992px) and (min-height: 600px) {
     .tributos__section{
         overflow-x: hidden;
+        overflow-y: auto;
         height: 320px;
     }
 
