--- a/css/dam.css
+++ b/css/dam.css
@@ -69,7 +69,7 @@ footer{
     bottom: 0;
 }
 
-.tributos-footer p, span{
+.tributos-footer p span{
     font-size: .8rem;
     color: var(--text-dark);
 }
@@ -99,7 +99,7 @@ footer{
         grid-template-columns: 2fr repeat(7, 1fr);
     }
 
-    .tributos-footer p, span{
+    .tributos-footer p span{
         font-size: 1rem;
     }
 }
