--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ input::placeholder{font-size: 1rem}
 
 .section-btn{
     flex-direction: column;
-    padding: 2.5em 0 0;
+    padding: 1.5em 0 0;
     gap: .5em;
 }
 
@@ -231,8 +231,9 @@ input::placeholder{font-size: 1rem}
     }
 }
 
-@media (min-width:1400px) {
-    body{font-size: 1.25rem} 
+@media (min-width: 1300px) {
     .section__head{width: 65%}
     .section__main{width: 45%}
+    .ag-logo, .footer-logo{width: 80px}
+
 }
