--- a/css/index.css
+++ b/css/index.css
@@ -7,22 +7,11 @@
     font-family: "Rubik", sans-serif;
 }
 
+html{background-color:#2765D9;}
+
 body{
     height: 100vh;
-    padding: 1em;
     background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);
-}
-
-.content a{text-decoration: none;}
-
-.content p{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateY(-50%);
-
-    color: #fff;
-    margin: 1em;
 }
 
 .ag-logo{
@@ -41,7 +30,6 @@ body{
     color: #fff;
     width: fit-content;
     padding: .5em 0;
-    margin: 1em;
     border-bottom: 2.5px solid #fff;
 }
 
