--- a/css/index.css
+++ b/css/index.css
@@ -7,12 +7,12 @@
     font-family: "Rubik", sans-serif;
 }
 
-html{background-color:#2765D9;}
-
-body{
-    height: 100vh;
-    background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);
+html{
+    height: 100dvh;
+    background-color: #2765D9(
 }
+
+body{background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);}
 
 .ag-logo{
     width: 150px;
