--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 
 html{
     height: 100vh;
-    background-color: #2765D9(
+    background-color: #2765D9;
 }
 
 body{background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);}
