--- a/css/index.css
+++ b/css/index.css
@@ -10,18 +10,19 @@
 html{background-color: #2765D9}
 
 body{
-    height: 100dvh;
+    height: 100vh;
     background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);
 }
 
 .ag-logo{
+    margin: .5em;
     width: 150px;
 }
 
 .btn{
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 1%;
+    right: 1%;
 
     display: flex;
     align-items: center;
@@ -30,6 +31,7 @@ body{
     color: #fff;
     width: fit-content;
     padding: .5em 0;
+    margin: .5em;
     border-bottom: 2.5px solid #fff;
 }
 
