--- a/css/dam.css
+++ b/css/dam.css
@@ -52,9 +52,7 @@
     text-align: start;
 }
 
-.tributos{
-    display: flex;
-}
+.tributos{display: flex}
 
 .tributos-title, .tributos-content{
     display: flex;
@@ -73,9 +71,7 @@
     padding: .5em;
 }
 
-.tributos-content{
-    flex-basis: 60%;
-}
+.tributos-content{flex-basis: 60%}
 
 footer{
     position: fixed;
@@ -104,9 +100,7 @@ footer{
         height: 320px;
     }
 
-    .tributos{
-        flex-direction: column;
-    }
+    .tributos{flex-direction: column}
 
     .tributos-title, .tributos-content{
         display: grid;
@@ -122,7 +116,5 @@ footer{
 }
 
 @media (min-width: 1200px) and (min-height: 935px){
-    .tributos__section{
-        height: 650px;
-    } 
+    .tributos__section{height: 650px} 
 }
