--- a/css/dam.css
+++ b/css/dam.css
@@ -4,8 +4,9 @@
     transform: translateX(-100%);
 
     background-color: var(--clr-blue-primary);
-    z-index: 1;
     height: 100%;
+    z-index: 1;
+    overflow-y: auto;
     transition: 1s;
 }
 
@@ -24,11 +25,19 @@
     transform: translateX(0);
 }
 
-.bi-x-lg{color:#fff}
+.container-main{
+    padding: 0 1em;
+}
+
+.sidebar .bi-x-lg{color:#fff}
 
 .close-btn{
     background-color: transparent;
     border: none;
+}
+
+.aside-content i{
+    color: #febb01;
 }
 
 .aside-title, .list-title{color: var(--clr-yellow)}
@@ -40,6 +49,21 @@
 }
 
 .aside-list li{margin-top: .5em}
+.aside-list select, .aside-list input{margin-bottom: .5em}
+
+#subtotal{
+    border-radius: 16px;
+    padding: .25em .75em;
+    border: none;
+}
+
+.input-date, #subtotal{width: 100%}
+
+.filter-select, .input-date{
+    padding: .25em .75em;
+}
+
+#subtotal:focus, #subtotal:hover, .filter-select:focus{outline: none}
 
 .tributos__section{
     overflow-y: scroll;
@@ -52,7 +76,13 @@
     text-align: start;
 }
 
-.tributos{display: flex}
+.selected{
+    background-color: var(--clr-blue-secondary);
+    color: #fff;
+}  
+
+/* GRID DOS TRIBUTOS */
+.tributos{display: flex} 
 
 .tributos-title, .tributos-content{
     display: flex;
@@ -60,25 +90,48 @@
 }
 
 .tributos-title{
-    background-color: var(--bg-tributo);
-    border-right: 1px solid #DCDCDC;
     flex-basis: 40%;
     font-weight: 500;
 }
 
-.tributos-title span, .tributos-content span{
+.tributos-title, .modal-tributos-title{
+    background-color: var(--bg-tributo);
+    border-right: 1px solid #DCDCDC;
+}
+
+.tributos-title span, .tributos-content span, .modal-tributos-title span, .modal-tributos-content span{
     border-bottom: 1px solid #DCDCDC;
     padding: .5em;
 }
 
+.bi-x-circle{color: red}
 .tributos-content{flex-basis: 60%}
+.tributos-footer{color: var(--text-dark)}
 
-footer{
-    position: fixed;
-    bottom: 0;
+#pagar .modal-header{color:var(--clr-blue-primary)}
+
+.new-charge-btn{
+    background-color: var(--clr-blue-primary);
+    color: #fff;
+    width: fit-content;
+    border: none;
+    padding: .25em .5em;
+    border-radius: 4px;
+    margin: 1em;
+    align-self: end;
 }
 
-.tributos-footer{color: var(--text-dark)}
+.new-charge-btn:hover{
+    opacity: .75;
+}
+
+footer{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 @media (max-width:576px) {
     .pay-btn{
@@ -93,10 +146,10 @@ footer{
     footer div{display: none}
 }
 
-@media (min-width: 992px) and (min-height: 600px) {
+@media (min-width: 700px) and (min-height: 600px) {
     .tributos__section{
         overflow-y: auto;
-        overflow-x: hidden;
+        overflow: auto;
         height: 320px;
     }
 
@@ -104,17 +157,53 @@ footer{
 
     .tributos-title, .tributos-content{
         display: grid;
-        grid-template-columns: 1.5fr repeat(7, 1fr);   
-        text-align: center;    
-        border-right: none; 
+        grid-template-columns: repeat(13, 1fr);   
     }
 
-    .selected{
-        background-color: var(--clr-blue-secondary);
-        color: #fff;
-    }  
+    .tributos-title, .tributos-content, .modal-tributos-title, .modal-tributos-content{
+        text-align: center;    
+        border-right: none;
+    }
+
+    .modal-tributos-title, .modal-tributos-content{
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+    }
+
+    .remove{
+        display: none;
+    }
+
+    ::-webkit-scrollbar{
+        width: 3px;
+        border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-track{
+        background: none; 
+        border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb{
+        background: #d9d9d9; 
+        border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover{
+        background: #555; 
+    }
 }
 
-@media (min-width: 1200px) and (min-height: 935px){
-    .tributos__section{height: 650px} 
+@media (min-width: 750px) and (min-height: 700px) {
+    .tributos__section{
+        height: 350px;
+    }
+}
+
+@media (min-width: 750px) and (min-height: 900px) {
+    .tributos__section{height: 650px}
+}
+
+@media (min-width: 1200px) and (min-height: 1000px){
+    .tributos__section{height: 700px} 
 }
