--- a/bootstrap-5.3.3-dist/css/bootstrap.css
+++ b/bootstrap-5.3.3-dist/css/bootstrap.css
@@ -5471,7 +5471,7 @@ textarea.form-control-lg {
 
 .modal {
   --bs-modal-zindex: 1055;
-  --bs-modal-width: 500px;
+  --bs-modal-width: fit-content;
   --bs-modal-padding: 1rem;
   --bs-modal-margin: 0.5rem;
   --bs-modal-color: ;
