--- a/css/portal.css
+++ b/css/portal.css
@@ -195,11 +195,18 @@ input::placeholder, input:focus{color: var(--text-gray)}
     
     #input-busca{padding: .5em 1em}
 
-    .grid__section{grid-template-columns: repeat(3, 1fr)}
+    .grid__section{grid-template-columns: repeat(2, 1fr)}
 
     .search-box, .grid-title{
         width: 50%;
         margin: 0;
+    }
+
+    footer{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
